Fix firefox not supporting letter-spacing in SVG

--- a/source/stylesheets/nas-new-york-state-of-mind.css.scss
+++ b/source/stylesheets/nas-new-york-state-of-mind.css.scss
@@ -140,6 +140,21 @@ article {
       padding-top: 450%;
       width: 100%;
     }
+    @-moz-document url-prefix() {
+      height: auto;
+      padding: 0;
+      > svg {
+        display: none;
+      }
+      > img {
+        display: block;
+        width: 100%;
+      }
+      @media screen and (max-width: 500px) {
+        padding-top: 0;
+        width: 100%;
+      }
+    }
   }
   figcaption {
     color: #000;
